--- a/static/css/work5.css
+++ b/static/css/work5.css
@@ -313,6 +313,36 @@ textarea {
     height: 300px;
 }
 
-.container{
-    min-height: 60hv;
+.container {
+    min-height: 200px;
+}
+
+.media-object {
+    height: 400px;
+    margin-left: 328px;
+}
+
+.media {
+    margin-right: 350px;
+}
+
+.media h3 {
+    margin-left: 372px;
+}
+
+
+.square_btn{
+    display: inline-block;
+    padding: 0.5em 1em;
+    text-decoration: none;
+    background: #668ad8;/*Button Color*/
+    color: #FFF;
+    border-bottom: solid 4px #627295;
+    border-radius: 3px;
+}
+.square_btn:active {/*on Click*/
+    -ms-transform: translateY(4px);
+    -webkit-transform: translateY(4px);
+    transform: translateY(4px);/*Move down*/
+    border-bottom: none;/*disappears*/
 }
