--- a/static/css/work5.css
+++ b/static/css/work5.css
@@ -123,6 +123,7 @@ li {
 
 .description {
     text-align: left;
+    margin-top: 10px;
 }
 
 .list {
@@ -237,7 +238,7 @@ textarea {
     margin-bottom: 10px;
     width: 130px;
     padding-left: 0px;
-    font-size: 40px;
+    font-size: 35px;
     width: 100%;
     text-align: center;
     font-weight: 100;
@@ -298,8 +299,8 @@ textarea {
 }
 
 .row {
-    margin-right: 317px;
-    margin-left: 317px;
+    margin-right: 0px;
+    margin-left: 0px;
 }
 
 .caption h3 {
@@ -316,7 +317,7 @@ textarea {
 
 .media-object {
     height: 400px;
-    margin-left: 328px;
+    margin-left: 0px;
 }
 
 .media {
@@ -324,8 +325,8 @@ textarea {
 }
 
 .media h3 {
-    margin-left: 372px;
-    margin-right: 41px;
+    margin-left: 0px;
+    margin-right: 0px;
     text-align: center;
 }
 
@@ -340,14 +341,20 @@ textarea {
     border-radius: 3px;
     height: 60px;
     width: 200px;
+
 }
 .square_btn:active {/*on Click*/
     -ms-transform: translateY(4px);
     -webkit-transform: translateY(4px);
     transform: translateY(4px);/*Move down*/
     border-bottom: none;/*disappears*/
+
 }
 
 .media-heading {
     text-align: center;
+}
+
+.form-control {
+    width: 300px;
 }
