--- a/mainapp/templates/mainapp/includes/inc_menu.html
+++ b/mainapp/templates/mainapp/includes/inc_menu.html
@@ -46,6 +46,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{% url 'main' %}">Главная</a></li>
           <li><a href="{% url 'catalog' %}">Каталог</a></li>
+          <li><a href="{% url 'contacts' %}">Контакты</a></li>
           <li><a href="{% url 'adminka:users' %}">админка</a></li>
               </ul>
     </div><!-- /.navbar-collapse -->
