--- a/mainapp/templates/mainapp/contacts.html
+++ b/mainapp/templates/mainapp/contacts.html
@@ -1,42 +1,45 @@
 <!DOCTYPE html>
 {% load staticfiles %}
 <html>
-<head>
-<link rel="stylesheet" href="{% static 'css/work5.css' %}">
-<link rel="stylesheet" href="{% static 'css/menu.css' %}">
-</head>
 
 <head>
     <meta charset="utf-8">
     <title>КНИЖНАЯ КЛАССИКА</title>
-    <link rel="stylesheet" type="text/css" href="/static/css/work5.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-          integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-</head>
+
+    <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+
+    <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
+
+    <link rel="stylesheet" href="{% static 'css/work5.css' %}">
 
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="logo-mag">
-                <a class="logo-link" href="/">
-                    <img class="logo" src="/static/img/1.png">
-                </a>
-                Книжная классика
+<div class="container">
+   <div class="page-header">
+                <h1>Книжная классика <small></small></h1>
+
+            {% include "mainapp/includes/inc_menu.html" %}
             </div>
-
-          {% include "mainapp/includes/inc_menu.html" %}
-
-        </div>
         <div class="main-content">
             <h2>Есть вопросы, пожелания? Напишите нам!</h2>
-            <form action="#" method="POST">
-                Ваше имя <br>
-                <input class="myform" name="name" type="text" placeholder="Введите имя">
-                <br> Email <br>
-                <input class="myform my-email" name="ema" type="email" placeholder="email">
+
+
+                <form action="#" method="POST">
+
+                   <div class="form-group">
+    <label>Name</label>
+    <input class="form-control" id="exampleInputPassword1" placeholder="Enter your name">
+  </div>
+                    <div class="form-group">
+    <label>Email address</label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+  </div>
+
+
+</form>
                 <br> Сообщение
                 <br>
-                <textarea class="message" name="massage"></textarea>
+                <textarea class="form-control" rows="3"></textarea>
                 </br>
                 <input type="reset">
                 <button type="submit">Отправить</button>
@@ -60,3 +63,5 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1999.8270770728575!2d30.350954851716136!3d59.91841717060275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x469631b30ae2112d%3A0x709838e29ab0ceba!2z0JvQuNCz0L7QstGB0LrQuNC5INC_0YAuLCAxMTYsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExMTk!5e0!3m2!1sru!2sru!4v1528049533763"
                 width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
             {% include "mainapp/includes/inc_footer.html" %}
+        </div>
+</div>
